lat and long changed to CDMX

--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -33,11 +33,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <h1>Sube un nuevo lugar</h1>
       <p>Elige una ubicación en el siguiente mapa y detalla que tan accesible es</p>
     </div>
-    <google-map id="map" fit-to-markers api-key="AIzaSyD3E1D9b-Z7ekrT3tbhl_dy8DCXuIuDDRc">
-      <google-map-marker id="marker" drag-events="true" latitude="37.78" longitude="-122.4" draggable="true"></google-map-marker>
+    <google-map id="map" latitude="19.432" longitude="-99.13" fit-to-markers api-key="AIzaSyD3E1D9b-Z7ekrT3tbhl_dy8DCXuIuDDRc">
+      <google-map-marker id="marker" drag-events="true" latitude="19.432" longitude="-99.13" draggable="true"></google-map-marker>
     </google-map>
   </template>
-
   <script>
     class MyView1 extends Polymer.Element {
       static get is() { return 'my-view1'; }
