--- a/src/my-view404.html
+++ b/src/my-view404.html
@@ -20,7 +20,42 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    Oops you hit a 404. <a href="[[rootPath]]">Head back to home.</a>
+    Oops you hit a 
+                                                     .~))>>
+     44  44    000000    44   44                      .~)>>
+     44  44    00  00    44   44                   .~))))>>>
+     44  44    00  00    44   44                  .~))>>             ___
+     444444    00  00    4444444                .~))>>)))>>      .-~))>>  
+         44    00  00         44              .~)))))>>       .-~))>>)>
+         44    000000         44            .~)))>>))))>>  .-~)>>)>
+                        )                 .~))>>))))>>  .-~)))))>>)>
+                     ( )@@*)             //)>))))))  .-~))))>>)>
+                   ).@(@@               //))>>))) .-~))>>)))))>>)>
+                 (( @.@).              //))))) .-~)>>)))))>>)>
+               ))  )@@*.@@ )          //)>))) //))))))>>))))>>)>
+            ((  ((@@@.@@             |/))))) //)))))>>)))>>)>
+           )) @@*. )@@ )   (\_(\-\b  |))>)) //)))>>)))))))>>)>
+         (( @@@(.@(@ .    _/`-`  ~|b |>))) //)>>)))))))>>)>
+          )* @@@ )@*     (@) (@)  /\b|))) //))))))>>))))>>
+        (( @. )@( @ .   _/       /  \b)) //))>>)))))>>>_._
+         )@@ (@@*)@@.  (6,   6) / ^  \b)//))))))>>)))>>   ~~-.
+      ( @jgs@@. @@@.*@_ ~^~^~, /\  ^  \b/)>>))))>>      _.     `,
+       ((@@ @@@*.(@@ .   \^^^/' (  ^   \b)))>>        .'         `,
+        ((@@).*@@ )@ )    `-'   ((   ^  ~)_          /             `,
+          (@@. (@@ ).           (((   ^    `\        |               `.
+            (*.@*              / ((((        \        \      .         `.
+                              /   (((((  \    \    _.-~\     Y,         ;
+                             /   / (((((( \    \.-~   _.`" _.-~`,       ;
+                            /   /   `(((((()    )    (((((~      `,     ;
+                          _/  _/      `"""/   /'                  ;     ;
+                      _.-~_.-~           /  /'                _.-~   _.'
+                    ((((~~              / /'              _.-~ __.--~
+                                       ((((          __.-~ _.-~
+                                                   .'   .~~
+                                                   :    ,'
+                                                   ~~~~~
+    
+    <a href="[[rootPath]]">Head back to home.</a>
   </template>
 
   <script>
