--- a/src/my-map.html
+++ b/src/my-map.html
@@ -1,34 +1,37 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../bower_components/google-map/google-map.html">
-
 <link rel="import" href="shared-styles.html">
 
-<dom-module id="my-view1">
+<dom-module id="my-map">
   <template>
     <style include="shared-styles">
       :host {
         display: block;
-
         padding: 10px;
       }
       google-map {
-        width: 1100px;
-        height: 500px;
+        display: block;
+        height: 740px;
+        width: 100%;
       }
+      
     </style>
-
-    <div class="card">
+    <k-speech auto-play 
+      text    = "Sube un nuevo lugar, Solo elige una ubicación en el siguiente mapa y detalla que tan accesible es"
+      volume  = "1"
+      rate    = "1"
+      pitch   = "2">
+    </k-speech>
+    
       <google-map fit-to-marker api-key="AIzaSyD3E1D9b-Z7ekrT3tbhl_dy8DCXuIuDDRc">
         <google-map-marker latitude="37.78" longitude="-122.4" draggable="true"></google-map-marker>
       </google-map>
-    </div>
   </template>
 
   <script>
-    class MyView1 extends Polymer.Element {
-      static get is() { return 'my-view1'; }
+    class MyMap extends Polymer.Element {
+      static get is() { return 'my-map'; }
     }
 
-    window.customElements.define(MyView1.is, MyView1);
+    window.customElements.define(MyMap.is, MyMap);
   </script>
 </dom-module>
