--- a/src/my-app.html
+++ b/src/my-app.html
@@ -13,9 +13,6 @@
 <link rel="import" href="../bower_components/google-map/google-map.html">
 <link rel="import" href="my-icons.html">
 
-<link rel="lazy-import" href="my-view1.html">
-<link rel="lazy-import" href="my-view2.html">
-<link rel="lazy-import" href="my-view3.html">
 <link rel="lazy-import" href="my-view404.html">
 <link rel="lazy-import" href="home-view.html">
 <link rel="lazy-import" href="map-view.html">
@@ -83,9 +80,9 @@
       <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
         <app-toolbar><img src="images/logo/polimap_letras.png" style="width: 100%;height:100%;" alt="LogoPolymap"></img></app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="home" href="[[rootPath]]home">Inicio</a>
-          <a name="map" href="[[rootPath]]map">Ver Mapa</a>
-          <a name="place" href="[[rootPath]]place">Agregar Localidad</a>
+          <a name="home" href="[[rootPath]]home" alt="Inicio">Inicio</a>
+          <a name="map" href="[[rootPath]]map" alt="Ver Mapa">Ver Mapa</a>
+          <a name="place" href="[[rootPath]]place" alt="Agregar Localidad">Agregar Localidad</a>
         </iron-selector>
       </app-drawer>
 
@@ -103,9 +100,6 @@
             attr-for-selected="name"
             fallback-selection="view404"
             role="main">
-          <my-view1 name="view1"></my-view1>
-          <my-view2 name="view2"></my-view2>
-          <my-view3 name="view3"></my-view3>
           <my-view404 name="view404"></my-view404>
           <my-home name="home"></my-home>
           <my-map name="map"></my-map>
