--- a/src/my-place.html
+++ b/src/my-place.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
+<link rel="import" href="map-create.html">
 
 <dom-module id="my-place">
   <template>
@@ -11,11 +12,11 @@
       }
     </style>
 
-    <div class="card">
-      <div class="circle">2</div>
-      <h1>View Two</h1>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.</p>
-      <p>Id nam odio natum malorum, tibique copiosae expetenda mel ea.Detracto suavitate repudiandae no eum. Id adhuc minim soluta nam.Id nam odio natum malorum, tibique copiosae expetenda mel ea.</p>
+  <div class="card">
+      <h1>Sube un nuevo lugar</h1>
+      <!-- <div class="circle">1</div> -->
+      <p>Elige una ubicación en el siguiente mapa y detalla que tan accesible es</p>
+      <map-create></map-create>
     </div>
   </template>
 
