--- a/src/my-home.html
+++ b/src/my-home.html
@@ -42,7 +42,7 @@
         <p class="cuerpo">Valora la accesibilidad de los lugares. Puedes encontrar y compartir bancos, museos, restaurantes, hoteles, etc. que sean accesibles para personas con capacidades diferentes.</p>
 
       </div>
-            <img src="../images/fondo/wall1.png" class="fondo">
+            <img src="../images/fondo/wall1.png" class="fondo" alt="Banner">
 
     </div>
 
