--- a/src/my-map.html
+++ b/src/my-map.html
@@ -16,7 +16,7 @@
       
     </style>
     <k-speech auto-play 
-      text    = "Sube un nuevo lugar, Solo elige una ubicación en el siguiente mapa y detalla que tan accesible es"
+      text    = "Selecciona un marcador para conocer la accesibilidad del inmueble"
       volume  = "1"
       rate    = "1"
       pitch   = "2">
