--- a/src/my-place.html
+++ b/src/my-place.html
@@ -13,6 +13,12 @@
     </style>
 
   <div class="card">
+      <k-speech auto-play 
+      text    = "¿Cómo subir un nuevo lugar?, Elige una ubicación en el siguiente mapa y detalla que tan accesible es."
+      volume  = "1"
+      rate    = "1"
+      pitch   = "2">
+    </k-speech>
       <h1>Sube un nuevo lugar</h1>
       <!-- <div class="circle">1</div> -->
       <p>Elige una ubicación en el siguiente mapa y detalla que tan accesible es</p>
