map-view asignColors function to categorize location accesibility by color

--- a/src/map-create.html
+++ b/src/map-create.html
@@ -60,6 +60,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
+    <!-- TODO: search query (paper-search-panel) -->
     <!-- <google-map-search id="search" map="[[map]]" query="Pizza" results="{{results}}">
     </google-map-search> -->
     <google-map map="{{map}}" id="map" click-events="true" latitude="19.432" longitude="-99.13" fit-to-markers api-key="AIzaSyD3E1D9b-Z7ekrT3tbhl_dy8DCXuIuDDRc">
