--- a/src/map-view.html
+++ b/src/map-view.html
@@ -1,41 +1,54 @@
+<!--
+@license
+Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
+This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
+The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
+The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
+Code distributed by Google as part of the polymer project is also
+subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
+-->
+
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/google-map/google-map.html">
 <link rel="import" href="../bower_components/google-map/google-map-search.html">
 <link rel="import" href="../bower_components/google-map/google-map-marker.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="my-form.html">
 
 
 
 <link rel="import" href="shared-styles.html">
 
 
-<dom-module id="map-create">
-  <template  is="dom-bind">
+<dom-module id="map-view">
+  <template is="dom-bind">
     <style include="shared-styles">
       :host {
         display: block;
 
         padding: 10px;
       }
+
       google-map {
-       width: 100%;
-       height: 550px;
-       color: #757575 ;
-       border-radius: 5px;
-       box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-     }
-      google-map-search {
-          width: 250px;
-          height: 50px;
+        width: 100%;
+        height: 550px;
+        color: #757575;
+        border-radius: 5px;
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
       }
+
+      google-map-search {
+        width: 250px;
+        height: 50px;
+      }
+
       paper-dialog.colored {
         border: 2px solid;
         border-color: #4caf50;
         background-color: #f1f8e9;
         color: #4caf50;
       }
+
       paper-dialog.size-position {
         position: fixed;
         top: 16px;
@@ -44,76 +57,80 @@
         height: 300px;
         overflow: auto;
       }
+
+      paper-dialog {
+        width: 180px;
+        height: 120px;
+        text-align: center;
+      }
     </style>
-    <google-map-search id="search" map="[[map]]" query="Pizza" results="{{results}}">
-    </google-map-search>
+    <!-- <google-map-search id="search" map="[[map]]" query="Pizza" results="{{results}}">
+    </google-map-search> -->
     <google-map map="{{map}}" id="map" click-events="true" latitude="19.432" longitude="-99.13" fit-to-markers api-key="AIzaSyD3E1D9b-Z7ekrT3tbhl_dy8DCXuIuDDRc">
       <google-map-marker icon="{{imgob}}" id="marker" drag-events="true" latitude="19.432" longitude="-99.13" draggable="true">
         <h2>Nombre lugar</h2>
         <span>dirección del lugarcillo 123</span>
       </google-map-marker>
-      <template is="dom-repeat" items="{{results}}" as="marker">
-        <google-map-marker icon="../images/sem.png" latitude="{{marker.latitude}}" longitude="{{marker.longitude}}">
-          <h2>{{marker.name}}</h2>
-          <span>{{marker.formatted_address}}</span>
+      <template is="dom-repeat" items="{{locations}}" as="marker">
+        <google-map-marker latitude="{{marker.latitud}}" longitude="{{marker.longitud}}">
+          <p>Score: {{marker.accesibilidad}}</p>
         </google-map-marker>
       </template>
     </google-map>
 
-    <!-- <paper-dialog-impl id="myDialog">
-      <h2>Header</h2> -->
-      <paper-dialog id="myDialog">
-        <my-form></my-form>
-      </paper-dialog>
-    <!-- </paper-dialog-impl> -->
+    <paper-dialog id="myDialog">
+      <h4>¿Que tan accesible es este lugar?</h4>
+    </paper-dialog>
   </template>
   <script>
-    class MapCreate extends Polymer.Element {
-      static get is() { return 'map-create'; }
+    class MapView extends Polymer.Element {
+      static get is() { return 'map-view'; }
 
       static get properties() {
         return {
-          thingCount: {
-            value: 0,
-            observer: '_thingCountChanged'
-          },
           imgob: {
-            value:{
+            value: {
               url: "../images/baja.png"
-            }      
+            }
+          },
+          locations: {
+            value: [],
           }
         }
       }
-      
-      ready(){       
+
+      getLocations() {
+        firebase.database().ref('/locations').once('value').then((snapshot) => {
+          this.locations.value = snapshot.val();
+          console.log("LOCS ",this.locations);
+        });
+      }
+
+      ready() {
         super.ready();
         var marker = this.$.marker;
         var gmap = this.$.map;
         var s = this.$.search;
-        var dial = this.$.myDialog;        
-        // var scrollable = Polymer.dom(myDialog).querySelector('paper-dialog');
-        console.log(dial);
-        // s.search();
-        // gmap.addEventListener('api-load', function (e) {
-        //   document.querySelector('google-map-directions').map = this.map;
-        // });
-        console.log(gmap);        
-        gmap.mouseEvents=true;
+        var dial = this.$.myDialog;
+
+       // s.search();
+        this.getLocations();
+        console.log(gmap);
+        gmap.mouseEvents = true;
         this.addEventListener('google-map-click', (e) => {
           var latLng = e.detail.latLng;
           console.log('CLICK', latLng.lat(), latLng.lng());
+          marker.latitude = latLng.lat();
+          marker.longitude = latLng.lng();
           dial.open();
         });
         this.addEventListener('google-map-marker-dragend', function (e) {
           var latLng = e.detail.latLng;
           console.log('pin dropped', latLng.lat(), latLng.lng());
-          // point.latitude = latLng.lat();
-          // point.longitude = latLng.lng();
-          // poly._buildPathFromPoints();
         });
-        
+
       }
     }
-    window.customElements.define(MapCreate.is, MapCreate);
+    window.customElements.define(MapView.is, MapView);
   </script>
 </dom-module>
