--- a/src/my-form.html
+++ b/src/my-form.html
@@ -52,26 +52,67 @@
       pitch   = "2">
     </k-speech>
         <h3>¿Que tan accesible es este lugar?</h3>
+        <iron-form id="form5">
         <form method="get" action="/foo" novalidate>
-          <paper-checkbox name="rampas" required>Cuenta con rampas</paper-checkbox><br>
-          <paper-checkbox name="ascensor" required>Cuenta con ascensor amplio</paper-checkbox><br>
-          <paper-checkbox name="baño" required>Cuenta con baño para discapacitados</paper-checkbox><br>
-          <paper-checkbox name="visibilidad" required>Tiene visibilidad</paper-checkbox><br>
-          <paper-checkbox name="señalización" required>Cuenta con señalización</paper-checkbox><br>
-          <paper-checkbox name="lineas" required>Existen lineas de discapacitados visuales</paper-checkbox><br>
+          <paper-checkbox name="rampas">Cuenta con rampas</paper-checkbox><br>
+          <paper-checkbox name="ascensor">Cuenta con ascensor amplio</paper-checkbox><br>
+          <paper-checkbox name="baño">Cuenta con baño para discapacitados</paper-checkbox><br>
+          <paper-checkbox name="visibilidad">Tiene visibilidad</paper-checkbox><br>
+          <paper-checkbox name="señalización">Cuenta con señalización</paper-checkbox><br>
+          <paper-checkbox name="lineas">Existen lineas de discapacitados visuales</paper-checkbox><br>
           <br>
-          <div class="button"><paper-button raised onclick="form5.submit()">Enviar</paper-button></div>
+          <div class="button"><paper-button raised onclick="accesible()">Enviar</paper-button></div>
         </form>
+      <div class="output"></div>
       </iron-form>
   </template>
 
   <script>
     class MyForm extends Polymer.Element {
       static get is() { return 'my-form'; }
-      
+
+      static get properties() {
+        return {
+          checked: {
+            type: Boolean,
+            value: false  // initial value required for binding
+          }
+        }
+      }
+
+      accesible() {
+        var rampas = this.$.rampas;
+        var ascensor = this.$.ascensor;
+        var baño = this.$.baño;
+        var visibilidad = this.$.visibilidad;
+        var señalizacion = this.$.señalización;
+        var lineas = this.$.lineas;
+        var clasificacion = 0;
+
+        if(rampas.checked){
+          clasificacion++;
+        }if(ascensor.checked){
+          clasificacion++;
+        }if(baño.checked){
+          clasificacion++;
+        }if(visibilidad.checked){
+          clasificacion++;
+        }if(señalización.checked){
+          clasificacion++;
+        }if(lineas.checked){
+          clasificacion++;
+        }if(clasificacion == 6 || clasificacion == 5){
+          console.log("Accesible");
+        }if(clasificacion==4 || clasificacion== 3){
+          console.log("Parcialmente");
+        }if(clasificacion < 3) {
+          console.log("Inaccesible");
+        }else{
+          console.log("No se ha clasificado");
+        }
+      }
     }
-
-
     window.customElements.define(MyForm.is, MyForm);
+
   </script>
 </dom-module>
