--- a/src/my-place.html
+++ b/src/my-place.html
@@ -7,13 +7,15 @@
     <style include="shared-styles">
       :host {
         display: block;
-
         padding: 10px;
       }
+      map-create{
+        height: 550px;
+        display: block;
+      }
     </style>
-
-  <div class="card">
-      <k-speech auto-play 
+    
+    <k-speech auto-play 
       text    = "¿Cómo subir un nuevo lugar?, Elige una ubicación en el siguiente mapa y detalla que tan accesible es."
       volume  = "1"
       rate    = "1"
