--- a/src/my-form.html
+++ b/src/my-form.html
@@ -119,7 +119,7 @@
         }else{
           console.log("No se ha clasificado");
         }
-        this.form.reset()
+        form.reset()
       }
     }
     window.customElements.define(MyForm.is, MyForm);
