--- a/src/map-create.html
+++ b/src/map-create.html
@@ -4,6 +4,8 @@
 <link rel="import" href="../bower_components/google-map/google-map-marker.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-search/paper-search.html">
+
 <link rel="import" href="my-form.html">
 
 
@@ -46,41 +48,38 @@
         height: 300px;
         overflow: auto;
       }
+      paper-search-panel{
+        width: 300px;        
+      }
     </style>
 
     <!-- TODO: search query (paper-search-panel) -->
-    <!-- <paper-search-panel search="{{search}}" count="{{count}}" items="[[items]]" has-more="[[hasMore]]" loading="[[loading]]"
-      filters="[[filters]]" selected-filters="{{selectedFilters}}" on-change-request-params="loadData">
-      <div>
-        Show your [[count]] results for "[[search]]"
-      </div>
-    </paper-search-panel>
-    <google-map-search id="search_box" map="[[map]]" query="[[query]]" results="{{results}}">
-    </google-map-search> -->
+    <!-- <paper-search-panel search="{{query}}" count="{{count}}" items="[[items]]" has-more="[[hasMore]]" loading="[[loading]]"
+       on-change-request-params="loadData">
+    </paper-search-panel> -->
+    <paper-search-bar query={{queryp}}>
+      <!-- <div>
+            Show your [[count]] results for "[[query]]"
+          </div> -->
+    </paper-search-bar>
+    <google-map-search id="searchBox" map="[[map]]" query="[[queryp]]" results="{{results}}">
+    </google-map-search>
     <google-map map="{{map}}" id="map" click-events="true" latitude="19.432" longitude="-99.13" fit-to-markers api-key="AIzaSyD3E1D9b-Z7ekrT3tbhl_dy8DCXuIuDDRc">
       <google-map-marker icon="{{imgob}}" id="marker" drag-events="true" latitude="19.432" longitude="-99.13" draggable="true">
-        <h2>Nombre lugar</h2>
-        <span>dirección del lugarcillo 123</span>
+        <!-- <h2>Nombre lugar</h2>
+        <span>dirección del lugarcillo 123</span> -->
       </google-map-marker>
-      <template is="dom-repeat" items="{{results}}" as="marker">
-        <google-map-marker icon="../images/sem.png" latitude="{{marker.latitude}}" longitude="{{marker.longitude}}">
-          <h2>{{marker.name}}</h2>
-          <span>{{marker.formatted_address}}</span>
+      <template is="dom-repeat" items="{{results}}" as="mrkr">
+        <google-map-marker latitude="{{mrkr.latitude}}" longitude="{{mrkr.longitude}}">
+          <h2>{{mrkr.name}}</h2>
+          <span>{{mrkr.formatted_address}}</span>
         </google-map-marker>
       </template>
     </google-map>
-
-    <!-- <paper-dialog-impl id="myDialog">
-      <h2>Header</h2> -->
-      <paper-dialog id="myDialog">
-        <my-form id="myForm" ponderacion="{{ponderation}}"></my-form>
-      </paper-dialog>
-    <!-- </paper-dialog-impl> -->
-    
-    <!-- <paper-dialog id="myDialog">
-        <h4>¿Que tan accesible es este lugar?</h4>
-        <paper-button on-click="buttonClick">Subir</paper-button>
-    </paper-dialog> -->
+    <google-map-directions map="{{map}}" start-address="San Francisco" end-address="Mountain View" travel-mode="BICYCLING" waypoints='[{"location": "Palo Alto"}, {"location": "San Mateo"}]'></google-map-directions>
+    <paper-dialog id="myDialog">
+      <my-form id="myForm" ponderacion="{{ponderation}}"></my-form>
+    </paper-dialog>
   </template>
   <script>
     class MapCreate extends Polymer.Element {
@@ -109,10 +108,8 @@
         super.ready();
         var marker = this.$.marker;
         var gmap = this.$.map;
-        var s = this.$.search;
-        var dial = this.$.myDialog;        
-
-        // s.search();
+        var s = this.$.searchBox;
+        var dial = this.$.myDialog;
 
         console.log(gmap);        
         gmap.mouseEvents=true;
@@ -123,6 +120,10 @@
           marker.longitude = latLng.lng();
           dial.open();
         });
+
+        this.addEventListener('google-map-search-results', (e)=> {
+          console.log(s.results);
+        })
 
         this.addEventListener('submit', (e) => {
           console.log("submiteado", e, "ponde", this.ponderation)
