--- a/src/my-app.html
+++ b/src/my-app.html
@@ -109,6 +109,7 @@
     </app-drawer-layout>
   </template>
   <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzn1t66XEAJ_WjSupB43xpl1o6f8jHhSE&libraries=places"></script>
   <script>
     // Initialize Firebase
     var config = {
