--- a/src/my-app.html
+++ b/src/my-app.html
@@ -61,6 +61,12 @@
         color: black;
         font-weight: bold;
       }
+      .logo{
+        width: 100%;
+        height:100%;    
+        padding-top: 30px;
+        padding-bottom: 20px;
+      }
     </style>
 
     <app-location
@@ -78,7 +84,7 @@
     <app-drawer-layout fullbleed narrow="{{narrow}}">
       <!-- Drawer content -->
       <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
-        <app-toolbar><img src="images/logo/polimap_letras.png" style="width: 100%;height:100%;" alt="LogoPolymap"></img></app-toolbar>
+        <app-toolbar><img src="images/logo/polimap_letras.png" class="logo" alt="LogoPolymap"></img></app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="home" href="[[rootPath]]home" alt="Inicio">Inicio</a>
           <a name="map" href="[[rootPath]]map" alt="Ver Mapa">Ver Mapa</a>
