--- a/src/my-form.html
+++ b/src/my-form.html
@@ -54,14 +54,14 @@
         <h3>¿Que tan accesible es este lugar?</h3>
         <iron-form id="form5">
         <form method="get" action="/foo" novalidate>
-          <paper-checkbox name="rampas">Cuenta con rampas</paper-checkbox><br>
-          <paper-checkbox name="ascensor">Cuenta con ascensor amplio</paper-checkbox><br>
-          <paper-checkbox name="baño">Cuenta con baño para discapacitados</paper-checkbox><br>
-          <paper-checkbox name="visibilidad">Tiene visibilidad</paper-checkbox><br>
-          <paper-checkbox name="señalización">Cuenta con señalización</paper-checkbox><br>
-          <paper-checkbox name="lineas">Existen lineas de discapacitados visuales</paper-checkbox><br>
+          <paper-checkbox id="rampas">Cuenta con rampas</paper-checkbox><br>
+          <paper-checkbox id="ascensor">Cuenta con ascensor amplio</paper-checkbox><br>
+          <paper-checkbox id="baño">Cuenta con baño para discapacitados</paper-checkbox><br>
+          <paper-checkbox id="visibilidad">Tiene visibilidad</paper-checkbox><br>
+          <paper-checkbox id="señalizacion">Cuenta con señalización</paper-checkbox><br>
+          <paper-checkbox id="lineas">Existen lineas de discapacitados visuales</paper-checkbox><br>
           <br>
-          <div class="button"><paper-button raised onclick="accesible()">Enviar</paper-button></div>
+          <div class="button"><paper-button raised on-click="accesible">Enviar</paper-button></div>
         </form>
       <div class="output"></div>
       </iron-form>
@@ -85,7 +85,7 @@
         var ascensor = this.$.ascensor;
         var baño = this.$.baño;
         var visibilidad = this.$.visibilidad;
-        var señalizacion = this.$.señalización;
+        var señalizacion = this.$.señalizacion;
         var lineas = this.$.lineas;
         var clasificacion = 0;
 
@@ -97,7 +97,7 @@
           clasificacion++;
         }if(visibilidad.checked){
           clasificacion++;
-        }if(señalización.checked){
+        }if(señalizacion.checked){
           clasificacion++;
         }if(lineas.checked){
           clasificacion++;
