--- a/src/my-home.html
+++ b/src/my-home.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/google-map/google-map.html">
 <link rel="import" href="../bower_components/k-speech/k-speech.html">
+<link rel="import" href="../../bower_components/iron-media-query/iron-media-query.html">
 
 
 <link rel="import" href="shared-styles.html">
@@ -14,7 +15,10 @@
       }
       .fondo{
         width: 100%;
-        height: 650px;
+      }
+      .marcador{
+        width: 20%;
+        margin-top: 5%;
       }
       .texto{
         position: absolute;
@@ -30,27 +34,130 @@
         color: white;
         text-align: justify;
       }
+      .card{
+        width: 33%;
+        display: inline-block;
+        margin: 0px !important;
+        padding: 0px !important;
+        text-align: center; 
+      }
+      .agregar{
+        background: #009dbe;
+        color: white;
+        border: transparent;
+        font-size: 30px;
+        margin-bottom: 2%;
+      }
+      .agregar:hover{
+        background: white;
+        color: #009dbe;
+        -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        transform: scale(1);
+        border: transparent;
+      }
+      p{
+        font-size: 24px;
+      }
     </style>
-    <div class="card">
-      <div class="texto">
-        <p class="titulo">Polymap</p>
-        <k-speech auto-play 
-    text    = "Polymap, Valora la accesibilidad de los lugares. Puedes encontrar y compartir bancos, museos, restaurantes, hoteles, etc. que sean accesibles para personas con capacidades diferentes."
+   <img src="../images/fondo/Fondo_blanco.png" class="fondo" alt="Banner">
+   <iron-media-query query="(min-width: 1024px)" query-matches="{{wide}}"></iron-media-query>
+   <iron-media-query full query="print" query-matches="{{print}}"></iron-media-query>
+    <div class="item" wide-layout$="{{wide}}">
+        <div class="description">
+          <template is="dom-if" if="{{!wide}}">
+            <!--MOVIL-->
+            <div class="card" style="width: 99%;margin-bottom: 2% !important;">
+              <img src="../images/buena.png" class="marcador" alt="Accesible">
+              <p>Accesible: Verde</p>
+            </div>
+            <div class="card" style="width: 99%;margin-bottom: 2% !important;">
+              <img src="../images/media.png" class="marcador" alt="Parcialmente Accesible">
+              <p>Parcialmente Accesible: Amarillo</p>
+            </div>
+            <div class="card" style="width: 99%;margin-bottom: 2% !important;">
+              <img src="../images/baja.png" class="marcador" alt="No Accesible">
+              <p>No Accesible: Rojo</p>
+            </div>
+            <div class="card" style="width: 99%;margin-top: 1% !important;">
+              <h3>Sube un nuevo lugar</h3>
+              <p>Elige una ubicación dentro del mapa y detalla que tan accesible es.</p>
+              <button class="agregar"  href="[[rootPath]]place">Agregar</button>
+            </div>
+          </template>
+          <template is="dom-if" if="{{wide}}">
+            <!--DESKTOP-->
+            <div class="card">
+              <img src="../images/buena.png" class="marcador" alt="Accesible">
+              <p>Accesible: Verde</p>
+            </div>
+            <div class="card">
+              <img src="../images/media.png" class="marcador" alt="Parcialmente Accesible">
+              <p>Parcialmente Accesible: Amarillo</p>
+            </div>
+            <div class="card">
+              <img src="../images/baja.png" class="marcador" alt="No Accesible">
+              <p>No Accesible: Rojo</p>
+            </div>
+            <div class="card" style="width: 100%;margin-top: 1% !important;">
+              <h2>Sube un nuevo lugar</h2>
+              <p>Elige una ubicación dentro del mapa y detalla que tan accesible es.</p>
+              <button class="agregar"  href="[[rootPath]]place">Agregar</button>
+            </div>
+          </template>
+        </div>
+      </div>
+    <k-speech auto-play 
+    text    = "Polymap, Valora la accesibilidad de los lugares. Puedes encontrar y compartir bancos, museos, restaurantes, hoteles, etc. que sean accesibles."
     volume  = "1"
     rate    = "1"
-    pitch   = "1"></k-speech>
-        <p class="cuerpo">Valora la accesibilidad de los lugares. Puedes encontrar y compartir bancos, museos, restaurantes, hoteles, etc. que sean accesibles para personas con capacidades diferentes.</p>
-
-      </div>
-            <img src="../images/fondo/wall1.png" class="fondo" alt="Banner">
-
-    </div>
-
+    pitch   = "1">
+    </k-speech>
+    
   </template>
 
   <script>
     class MyHome extends Polymer.Element {
       static get is() { return 'my-home'; }
+    
+    static get properties() {
+        return {
+          page: {
+            type: String,
+            reflectToAttribute: true,
+            observer: '_pageChanged',
+          },
+          routeData: Object,
+          subroute: String,
+          rootPath: String,
+        };
+      }
+
+      static get observers() {
+        return [
+          '_routePageChanged(routeData.page)',
+        ];
+      }
+
+      _routePageChanged(page) {
+        this.page = page || 'home';
+        if (!this.$.drawer.persistent) {
+          this.$.drawer.close();
+        }
+      }
+
+      _pageChanged(page) {
+        var resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
+        Polymer.importHref(
+            resolvedPageUrl,
+            null,
+            this._showPage404.bind(this),
+            true);
+      }
+
+      _showPage404() {
+        this.page = 'view404';
+      }
     }
 
     window.customElements.define(MyHome.is, MyHome);
