--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -40,6 +40,31 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: #212121;
         font-size: 22px;
       }
+      .oval-btn{
+        margin-bottom: 17px;
+        text-decoration: none;
+        color: #fff;
+        background-color: #26C580 ;
+        text-align: center;
+        letter-spacing: .5px;
+        cursor: pointer;
+        border: none;
+        height: 51px;
+        text-transform: none;
+        font-size: 16px;
+        font-weight: 600;
+        border-radius: 100px;
+        box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+        line-height: 36px;
+        padding: 0 2rem;
+      }
+      .oval-btn:hover{
+        box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
+      }
+       .oval-btn:focus {
+        outline: none;
+        background-color: #26C580 ;
+      }
     </style>
   </template>
 </dom-module>
