Error, usamos una ñ :C

--- a/src/my-form.html
+++ b/src/my-form.html
@@ -56,7 +56,7 @@
         <form method="get" action="/foo" novalidate>
           <paper-checkbox id="rampas">Cuenta con rampas</paper-checkbox><br>
           <paper-checkbox id="ascensor">Cuenta con ascensor amplio</paper-checkbox><br>
-          <paper-checkbox id="baño">Cuenta con baño para discapacitados</paper-checkbox><br>
+          <paper-checkbox id="bano">Cuenta con baño para discapacitados</paper-checkbox><br>
           <paper-checkbox id="visibilidad">Tiene visibilidad</paper-checkbox><br>
           <paper-checkbox id="señalizacion">Cuenta con señalización</paper-checkbox><br>
           <paper-checkbox id="lineas">Existen lineas de discapacitados visuales</paper-checkbox><br>
